[package]
name = "tokio_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "error1"
path = "src/bin/error/error1.rs"

[[bin]]
name = "error2"
path = "src/bin/error/error2.rs"

[[bin]]
name = "error3"
path = "src/bin/error/error3.rs"

[[bin]]
name = "error4"
path = "src/bin/error/error4.rs"

[[bin]]
name = "error5"
path = "src/bin/error/error5.rs"

[[bin]]
name = "async_error"
path = "src/bin/error/async_error.rs"

[[bin]]
name = "read_file"
path = "src/bin/io/read_file.rs"

[[bin]]
name = "channel"
path = "src/bin/channel/channel.rs"

[[bin]]
name = "channelVsChanle"
path = "src/bin/channel/channelVsChanle.rs"

[[bin]]
name = "channel2"
path = "src/bin/channel/channel2.rs"

[[bin]]
name = "broadcast"
path = "src/bin/channel/broadcast.rs"

[[bin]]
name = "mutex1"
path = "src/bin/mutex/mutex1.rs"

[[bin]]
name = "mutex2"
path = "src/bin/mutex/mutex2.rs"

[[bin]]
name = "mutex3"
path = "src/bin/mutex/mutex3.rs"

[[bin]]
name = "select1"
path = "src/bin/select/select1.rs"


[[bin]]
name = "select2"
path = "src/bin/select/select2.rs"


[[bin]]
name = "pin"
path = "src/bin/pin/pin.rs"

[[bin]]
name = "pin2"
path = "src/bin/pin/pin2.rs"

[[bin]]
name = "pin3"
path = "src/bin/pin/pin3.rs"

[[bin]]
name = "pin4"
path = "src/bin/pin/pin4.rs"



[dependencies]
anyhow = "1.0.102"
async-recursion = "1"
chrono = "0.4.44"
futures = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
